# vulkan-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
assets/: cs_office.glb  house.glb  icosphere.glb
src/: AssetManager.cpp  AssetManager.h  BoundingVolumeRenderer.cpp  BoundingVolumeRenderer.h  CameraController.cpp  CameraController.h  Common.h  Components.cpp  Components.h  ControlledCameraSystem.cpp  ControlledCameraSystem.h  DebugWindow.cpp  DebugWindow.h  ECS.h  EntitySearcher.cpp  EntitySearcher.h  EntitySystem.cpp  EntitySystem.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Instance.cpp  Instance.h  LightSystem.cpp  LightSystem.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelSelector.cpp  ModelSelector.h  Node.cpp  Node.h  NodeType.h  Pipeline.cpp  Pipeline.h  Renderer3D.cpp  (+17 more)
src/shaders/: id.frag  id.vert  line.frag  line.vert  model.frag  model.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  xray.frag  xray.vert
